# sima

./: CMakeLists.txt  LICENSE  README.md  sima.sln  sima.vcxproj
src/: main.cpp  stdafx.h
src/sim/: computer.cpp  computer.h  execution_error.h
src/sim/assembly/: instruction.cpp  instruction.h  operand.cpp  operand.h  program.cpp  program.h
src/ui/: application.cpp  application.h  memory_window.cpp  memory_window.h  proc_window.cpp  proc_window.h  utility.h  window.cpp  window.h
src/ui/utility/: com_initialize.h  win32helpers.h  windows_error.h
